k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dashbuilder
  labels:
    name: dashbuilder
    environment: production
